test/sema/negative/subtyping3_ptr.out
subtyping3_ptr.impala:3 col 22: error: mismatched types: expected 'bool' but found 'i32'
